classDiagram
    direction TB

    %% ==========================================
    %% Core Interfaces (Ports)
    %% ==========================================
    class MessagePublisher {
        <<interface>>
        +publish(msg: Message) void
        +close() void
    }

    class MessageSubscriber {
        <<interface>>
        +subscribe(topic: String, callback: Consumer~Message~) void
        +unsubscribe(topic: String) void
    }

    class TrafficService {
        <<interface>>
        +getAllRoads() List~Road~
        +getRoad(id: String) Road
        +getSegment(id: String) RoadSegment
        +getVehicles() List~Vehicle~
    }

    class VehicleNavigationPort {
        <<interface>>
        +setRoute(vehicleId: String, route: Route) void
    }

    %% ==========================================
    %% Domain Entities & Use Cases
    %% ==========================================
    class RoadLocation {
        +roadSegmentId: String
        +kilometricPoint: double
    }

    class Route {
        +segments: List~RouteSegment~
    }

    class SensorDevice {
        -deviceId: String
        -publisher: MessagePublisher
        +sendTelemetry(reading: double) void
    }

    class SmartBinDevice {
        -alertThreshold: double
        -wasteType: String
        -location: RoadLocation
        +updateFillLevel(level: double) void
        +updateLocation(newLocation: RoadLocation) void
        -publishMessage(level: double, status: String, topic: String) void
    }

    class GarbageTruck {
        -vehicleId: String
        -currentLocation: RoadLocation
        -publisher: MessagePublisher
        +updateLocation(newLocation: RoadLocation) void
        -publishTrafficEvent(action: String) void
    }

    class RouteCollectionUseCase {
        -trafficService: TrafficService
        -navigationPort: VehicleNavigationPort
        -subscriber: MessageSubscriber
        +calculateAndSetRoute(truckId: String, bins: List~SmartBinDevice~) void
        +handleTrafficIncident(incident: TrafficMessagePayload) void
    }

    class TrafficMessagePayload {
        +action: String
        +road: String
        +roadSegment: String
        +vehicleId: String
        +position: double
        +role: String
    }

    %% ==========================================
    %% Infrastructure Adapters
    %% ==========================================
    class AbstractMqttAdapter {
        <<abstract>>
        #brokerUrl: String
        #clientId: String
        #ensureConnected()* void
    }

    class AwsMqttAdapter {
        -connection: MqttClientConnection
        +publish(msg: Message) void
        +subscribe(topic: String, callback: Consumer~Message~) void
    }

    class HttpRestClient {
        -baseUrl: String
        +get(path: String, responseType: Class) T
        +put(path: String, body: Object, responseType: Class) R
    }

    class RestTrafficAdapter {
        -restClient: HttpRestClient
        +getAllRoads() List~Road~
    }

    class RestVehicleNavigationAdapter {
        -restClient: HttpRestClient
        +setRoute(vehicleId: String, route: Route) void
    }

    class App {
        %% Main application orchestrator
    }

    %% ==========================================
    %% Relationships
    %% ==========================================

    %% Inheritance & Implementation
    SensorDevice <|-- SmartBinDevice : Extends
    MessagePublisher <|.. AwsMqttAdapter : Implements
    MessageSubscriber <|.. AwsMqttAdapter : Implements
    AbstractMqttAdapter <|-- AwsMqttAdapter : Extends
    TrafficService <|.. RestTrafficAdapter : Implements
    VehicleNavigationPort <|.. RestVehicleNavigationAdapter : Implements

    %% Composition & Aggregation
    SmartBinDevice --> RoadLocation : Contains
    GarbageTruck --> RoadLocation : Contains
    GarbageTruck --> TrafficMessagePayload : Creates
    RestTrafficAdapter --> HttpRestClient : Uses
    RestVehicleNavigationAdapter --> HttpRestClient : Uses

    %% Dependency Injection / Orchestration
    SmartBinDevice --> MessagePublisher : Uses
    GarbageTruck --> MessagePublisher : Uses
    RouteCollectionUseCase --> TrafficService : Uses
    RouteCollectionUseCase --> VehicleNavigationPort : Uses
    RouteCollectionUseCase --> MessageSubscriber : Uses

    %% Setup
    App --> AwsMqttAdapter : Initializes
    App --> RestTrafficAdapter : Initializes
    App --> RestVehicleNavigationAdapter : Initializes
    App --> RouteCollectionUseCase : Orchestrates
